# fdic_bankfind_python

./: README.md  pyproject.toml
src/bank_find_api/: get_financials.py  helpers.py  main.py  number_of_banks_by_quarter.py  test_download.py
src/bulkcr/: get_financials.py  get_institutions.py  old_main.py
