[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "bulkcr"
version = "0.0.1"
authors = [
  { name="Matt Brigida" },
]
description = "Functions to help download bulk financial data from the FDIC's bankfind"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Matt-Brigida/fdic_bankfind_python"
"Bug Tracker" = "https://github.com/Matt-Brigida/fdic_bankfind_python/issues"
